manual/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orthweb
