manual/orthweb-cm.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
---
apiVersion: v1
kind: Namespace
metadata:
  name: orthweb
  labels:
    istio-injection: enabled
