manual/orthweb-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: orthanc
  namespace: orthweb
  labels:
    app: orth
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: orth
  template:
    metadata:
      labels:
        app: orth 
    spec:
      volumes:
      - name: cmvol
        configMap:
          name: orthanc-app
          defaultMode: 0755
      containers:
      - name: orthanc
        image: jodogne/orthanc-plugins
        args: ["/run/secrets/"]
        ports:
          - containerPort: 8042
        volumeMounts:
        - name: cmvol 
          mountPath: "/run/secrets/orthanc.json"
          subPath: "orthanc.json"
          readOnly: true
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /app/explorer.html
            port: 8042
            scheme: HTTP
            httpHeaders:
              - name: Authorization
                value: Basic b3J0aGFuYzpvcnRoYW5j
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 2
