manual/orthweb-workload.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: orthanc
  namespace: orthweb
  labels:
    app: orth
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: orth
  template:
    metadata:
      labels:
        app: orth 
    spec:
      volumes:
      - name: cmvol
        configMap:
          name: orthanc-app
          defaultMode: 0755
      containers:
      - name: orthanc
        image: jodogne/orthanc-plugins
        args: ["/run/secrets/"]
        ports:
          - containerPort: 8042
        volumeMounts:
        - name: cmvol 
          mountPath: "/run/secrets/orthanc.json"
          subPath: "orthanc.json"
          readOnly: true
#        - name: secvol
#          mountPath: "/run/secrets/tls.crt"
#          subPath: "tls.crt"
#          readOnly: true
#        - name: secvol
#          mountPath: "/run/secrets/tls.key"
#          subPath: "tls.key"
#          readOnly: true
#        lifecycle:
#          postStart:
#            exec:
#              command: ['/bin/sh','-c',' cat /run/secrets/tls.key /run/secrets/tls.crt > /run/secrets/tls.pem']
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /app/explorer.html
            port: 8042
            scheme: HTTP
            httpHeaders:
              - name: Authorization
                value: Basic b3J0aGFuYzpvcnRoYW5j
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  namespace: orthweb
  name: orthweb
  labels:
    service: orthweb
spec:
  type: ClusterIP
  selector:
    app: orth
  ports:
    - name: dicom
      protocol: TCP
      port: 4242
      targetPort: 4242
    - name: http
      protocol: TCP
      port: 8042
      targetPort: 8042
