manual/orthweb-ingress-tls.yaml
## gateway and virtual service for web and dicom traffic

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-gw
  namespace: orthweb
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS  
    hosts:
    - "web.orthweb.com"
    tls:
      mode: SIMPLE
      credentialName: orthweb-secret # secret in the same namespace as the istio-ingressgateway resource
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-vs
  namespace: orthweb
spec:
  hosts:
  - "web.orthweb.com"
  gateways:
  - web-gw
  http:
#  - match:
#    - uri: 
#        prefix: /app
  - route:
    - destination:
        host: orthweb # service label 
        port: 
          number: 8042
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dcm-gw
  namespace: orthweb
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 11112 
      name: dicom
      protocol: TLS  
    hosts:
    - "dicom.orthweb.com"
    tls:
      mode: SIMPLE
      credentialName: orthweb-secret # secret in the same namespace as the istio-ingressgateway resource
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dcm-vs
  namespace: orthweb
spec:
  hosts:
  - "dicom.orthweb.com"
  gateways:
  - dcm-gw
  tcp:
  - route:
    - destination:
        host: orthweb # service label 
        port: 
          number: 4242
