manual/orthweb-ingress.yaml
## gateway and virtual service for web and dicom traffic

## web.orthweb.com and dicom.orthweb.com should resolve to IP address of ingress gateway
# kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].ip}'
## test ingress gateway for web traffic using curl
# curl -v -X GET http://web.orthweb.com:80/app/explorer.html -u orthanc:orthanc
## test ingresss gateway for dicom traffic 
# using dcmtk: echoscu -ll debug -aec ORTHANC dicom.orthweb.com 11112 
# using dcm4che: storescu -c ORTHANC@dicom.orthweb.com:11112

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-gw
  namespace: orthweb
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP  
    hosts:
    - "web.orthweb.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-vs
  namespace: orthweb
spec:
  hosts:
  - "web.orthweb.com"
  gateways:
  - web-gw
  http:
#  - match:
#    - uri: 
#        prefix: /app
  - route:
    - destination:
        host: orthweb # service label 
        port: 
          number: 8042
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dcm-gw
  namespace: orthweb
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 11112 
      name: dicom
      protocol: TCP  
    hosts:
    - "dicom.orthweb.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dcm-vs
  namespace: orthweb
spec:
  hosts:
  - "dicom.orthweb.com"
  gateways:
  - dcm-gw
  tcp:
  - route:
    - destination:
        host: orthweb # service label 
        port: 
          number: 4242
